--- a/routing/index.html
+++ b/routing/index.html
@@ -7,7 +7,8 @@
      
         <body>
             <div id="topnav">
-				<li><a href="#/about">About Me</a></li>
+                <li><a href="#/home">Home</a></li>
+				<li><a href="#/about">About</a></li>
 				<li><a href="#/poi">My POIs</a></li>
 				<li><a href="#/service">Service</a></li>
 			</div>            
@@ -15,7 +16,7 @@
         <br>
         <div  ng-view></div>
 
-        <img ng-src="http://2.bp.blogspot.com/-1D3ZYnPFJZE/VM0PgrciaJI/AAAAAAAAIl0/qYQXEOcRYr4/s1600/Free%2BAngularJS%2BEbooks.png" height="150px">
+        <img ng-src="https://imgix.bustle.com/elite-daily/2017/05/08124701/aladdin-genie-prequel-2.jpg?w=998&h=598&fit=crop&crop=faces&auto=format&q=70" height="150px">
 
 
     </div>
