--- a/routing/index.html
+++ b/routing/index.html
@@ -9,6 +9,7 @@
             <div id="topnav">
                 <li><a href="#/home">Home</a></li>
                 <li><a href="#/register">Register</a></li>
+                <li><a href="#/login">Login</a></li>
 				<li><a href="#/about">About</a></li>
 				<li><a href="#/poi">My POIs</a></li>
 				<li><a href="#/service">Service</a></li>
@@ -43,6 +44,7 @@
         <script src="indexController.js" ></script>
         <script src="components/About/aboutController.js" ></script>
         <script src="components/Register/registerController.js" ></script>
+        <script src="components/Login/loginController.js" ></script>
         <script src="components/POI/poiCtrl.js" ></script>
         <script src="components/Services/serviceController.js" ></script>
         <script src="components/Services/localStorageModel.js"></script>
