--- a/routing/index.html
+++ b/routing/index.html
@@ -12,7 +12,8 @@
                 <li><a href="#/login">Login</a></li>
 				<li><a href="#/about">About</a></li>
 				<li><a href="#/service">Service</a></li>
-			</div>
+            </div>
+            <img src="cheers.jpg" style="margin-left: 30%;">
         <br>
         <br>
         <div ng-view></div>
@@ -47,6 +48,7 @@
         <script src="components/About/aboutController.js" ></script>
         <script src="components/Register/registerController.js" ></script>
         <script src="components/Login/loginController.js" ></script>
+        <script src="components/ForgotPassword/forgotPasswordController.js" ></script>
         <script src="components/Services/serviceController.js" ></script>
         <script src="components/Services/localStorageModel.js"></script>
         <script src="components/SinglePOI/singlePOICtrl.js" ></script>
