--- a/routing/index.html
+++ b/routing/index.html
@@ -7,11 +7,10 @@
      
         <body>
             <div id="topnav">
-                <li><a href="#/home">Home</a></li>
+                <li><a href="#/">Home</a></li>
                 <li><a href="#/register">Register</a></li>
                 <li><a href="#/login">Login</a></li>
 				<li><a href="#/about">About</a></li>
-				<li><a href="#/service">Service</a></li>
             </div>
         <br>
         <br>
