--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body ng-controller="indexController as indxCtrl">
      
         <div id="topnav">
-            <li><a href="#/home">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#/register">Register</a></li>
             <li><a href="#/login">Login</a></li>
             <li><a href="#/about">About</a></li>
