--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <body ng-controller="indexController as indxCtrl">
      
         <div id="topnav">
-            <li><a href="#">Home</a></li>
+            <li><a href="#/">Home</a></li>
             <li><a href="#/register">Register</a></li>
             <li><a href="#/login">Login</a></li>
+            <li><a href="#/logout">Logout</a></li>
             <li><a href="#/about">About</a></li>
             <li><a href="#/service">Service</a></li>
         </div>
@@ -43,6 +44,7 @@
         <script src="routing/components/About/aboutController.js" ></script>
         <script src="routing/components/Register/registerController.js" ></script>
         <script src="routing/components/Login/loginController.js" ></script>
+        <script src="routing/components/Logout/logoutController.js" ></script>
         <script src="routing/components/ForgotPassword/forgotPasswordController.js" ></script>
         <script src="routing/shared/Services/serviceController.js" ></script>
         <script src="routing/shared/Services/localStorageModel.js"></script>
