--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <br>
         <br>
         <div ng-view></div>
-        
+
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
         <script src="routing/node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>       
@@ -30,6 +30,7 @@
         <script src="routing/components/RegisteredUsers/ruCtrl.js"></script>
         <script src="routing/components/Guest/guestCtrl.js"></script>
         <script src="routing/components/POIS/poisController.js"></script>
+        <script src="routing/components/Favorites/favoritesController.js"></script>
 
 
 
