--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body ng-controller="indexController as indxCtrl">
      
         <div id="topnav">
-            <li><a ng-click="indxCtrl.authenticate()">Home</a></li>
+            <li><a ng-click="indxCtrl.route()">Home</a></li>
             <li><a href="#/register">Register</a></li>
             <li><a href="#/login">Login</a></li>
             <li><a href="#/about">About</a></li>
