--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <script src="routing/components/ForgotPassword/forgotPasswordController.js" ></script>
         <script src="routing/shared/Services/serviceController.js" ></script>
         <script src="routing/shared/Services/localStorageModel.js"></script>
+        <script src="routing/shared/Services/registeredUsersService.js"></script>
         <script src="routing/components/SinglePOI/singlePOICtrl.js" ></script>
         <script src="routing/components/RegisteredUsers/ruCtrl.js"></script>
         <script src="routing/components/Guest/guestCtrl.js"></script>
