--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html ng-app="TripMe">
     <head><title>Trip Me</title>
         <link rel="stylesheet" type="text/css" href="routing/resources/style.css" />
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway|Ubuntu" rel="stylesheet">
     </head>
     <body ng-controller="indexController as indxCtrl">
      
